<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk2"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="282dp"
        android:layout_height="628dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.439">



        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="36sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/ivProfileSignup"
            android:layout_width="98dp"
            android:layout_height="79dp"
            android:src="@drawable/ic_action_profile"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/full_name"
            android:textColor="#ffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etFullNameSignup"
            android:layout_width="222dp"
            android:layout_height="56dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/login_shape"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/username"
            android:textColor="#ffff"
            android:textSize="20sp" />

        <EditText

            android:id="@+id/etUsernameSignup"
            android:layout_width="222dp"
            android:layout_height="56dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/login_shape"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#ffff"
            android:textSize="20sp" />

        <EditText

            android:id="@+id/etEmail"
            android:layout_width="222dp"
            android:layout_height="56dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/login_shape"
            android:ems="10"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="101dp"
            android:layout_height="34dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="#ffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="222dp"
            android:layout_height="56dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/login_shape"
            android:ems="10"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:inputType="textVisiblePassword"/>

        <Button
            android:id="@+id/btnSignUp11"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_dark_blue"
            android:text="@string/sign_up"
            android:textColor="#ffff"
            android:textSize="24sp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"

            />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/llView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="647dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>


    <Button

        android:id="@+id/btnsLogin"
        android:layout_width="142dp"
        android:layout_height="64dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/circle_dark_blue"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

    <Button

        android:id="@+id/btnlSignup"
        android:layout_width="142dp"
        android:layout_height="64dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/circle_dark_blue"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>